--- a/box.html
+++ b/box.html
@@ -151,7 +151,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">Moves all child nodes at the center of the box.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -247,7 +247,7 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
 <dt><pre><span class="Keyword">method</span> <a href="#duplicate.e%2CBoxPtr%2CBoxObj"><span class="Identifier">duplicate</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a><span class="Other">;</span> <span class="Identifier">obj</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="box.html#BoxObj"><span class="Identifier">BoxObj</span></a><span class="Other">)</span><span class="Other">:</span> <a href="box.html#BoxPtr"><span class="Identifier">BoxPtr</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
-<p>Dublicates Box pointer.</p>
+<p>Duplicates Box pointer.</p>
 <p>Arguments:</p>
 <ul class="simple"><li><tt class="docutils literal"><span class="pre">obj</span></tt> is BoxObj variable.</li>
 </ul>
@@ -299,7 +299,7 @@ this method uses in the <tt class="docutils literal"><span class="pre">window.ni
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:04:55 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:48:03 UTC</small>
       </div>
     </div>
   </div>
