--- a/color_rect.html
+++ b/color_rect.html
@@ -141,7 +141,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">Displays color rectangle.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -234,7 +234,7 @@ Duplicates ColorRect object and create a new ColorRect pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:09:27 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:49:01 UTC</small>
       </div>
     </div>
   </div>
