--- a/popup.html
+++ b/popup.html
@@ -146,7 +146,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">By default popup visible is false. Popup, unlike other nodes, changes children visible when calling show() and hide().</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -256,7 +256,7 @@ Duplicates Popup object and create a new Popup pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:35:33 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:46:46 UTC</small>
       </div>
     </div>
   </div>
