--- a/scene.html
+++ b/scene.html
@@ -148,7 +148,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">The Scene uses in the <tt class="docutils literal"><span class="pre">window.nim</span></tt>. It contains other nodes. Only one scene can work at a time.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -259,7 +259,7 @@ Recalculates node positions.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 16:00:51 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:30:50 UTC</small>
       </div>
     </div>
   </div>
