--- a/texture_progress_bar.html
+++ b/texture_progress_bar.html
@@ -150,7 +150,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides convenient display progress.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -277,7 +277,7 @@ Changes background progress texture.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 07:56:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:11:21 UTC</small>
       </div>
     </div>
   </div>
