--- a/vslider.html
+++ b/vslider.html
@@ -151,7 +151,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides a primitive vertical slider.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -274,7 +274,7 @@ handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:56:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:14:16 UTC</small>
       </div>
     </div>
   </div>
