--- a/animated_sprite.html
+++ b/animated_sprite.html
@@ -160,7 +160,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides display animated sprites.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -342,7 +342,7 @@ Resumes animation.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 03:22:43 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:17:19 UTC</small>
       </div>
     </div>
   </div>
