--- a/audio_stream_player.html
+++ b/audio_stream_player.html
@@ -149,7 +149,9 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc"><p>AudioStreamPlayer used for playing audio.</p>
+<p>AudioStream is responsible for audio. You can play multiple audio recordings at once.</p>
+</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -269,7 +271,7 @@ Resume stream.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 16:05:52 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:24:16 UTC</small>
       </div>
     </div>
   </div>
