--- a/button.html
+++ b/button.html
@@ -151,7 +151,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">Handles mouse clicks.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -259,7 +259,7 @@ Handles user input. This uses in the <tt class="docutils literal"><span class="p
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:06:48 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:56:40 UTC</small>
       </div>
     </div>
   </div>
