--- a/canvas.html
+++ b/canvas.html
@@ -169,7 +169,9 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc"><p>Canvas is the root type of all 2D and Control nodes.</p>
+<p>Canvas used for drawing primitive geometry.</p>
+</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -370,7 +372,7 @@ Fills canvas.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 16:03:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:18:15 UTC</small>
       </div>
     </div>
   </div>
