--- a/control.html
+++ b/control.html
@@ -168,7 +168,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">The base of other Control nodes.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -314,7 +314,7 @@ Changes Control background color.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:12:05 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:57:55 UTC</small>
       </div>
     </div>
   </div>
