--- a/edittext.html
+++ b/edittext.html
@@ -120,7 +120,8 @@ function main() {
   color*: ColorRef             ## Text color.
   hint_color*: ColorRef        ## Hint color.
   caret_color*: ColorRef
-  text_align*: AnchorRef       ## Text align."><wbr />Edit<wbr />Text<wbr />Obj<span class="attachedType"></span></a></li>
+  text_align*: AnchorRef       ## Text align.
+  on_edit*: proc (pressed_key: string): void ## This called when user press any key."><wbr />Edit<wbr />Text<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#EditTextPtr"
     title="EditTextPtr = ptr EditTextObj"><wbr />Edit<wbr />Text<wbr />Ptr<span class="attachedType"></span></a></li>
 
@@ -165,7 +166,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides primitive text input.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -189,6 +190,7 @@ function main() {
   <span class="Identifier">hint_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="color.html#ColorRef"><span class="Identifier">ColorRef</span></a>        <span class="Comment">## Hint color.</span>
   <span class="Identifier">caret_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">text_align</span><span class="Operator">*</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>       <span class="Comment">## Text align.</span>
+  <span class="Identifier">on_edit</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">pressed_key</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when user press any key.</span>
   </pre></dt>
 <dd>
 
@@ -314,7 +316,7 @@ Changes EditText text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:15:42 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:59:05 UTC</small>
       </div>
     </div>
   </div>
