--- a/grid_box.html
+++ b/grid_box.html
@@ -154,7 +154,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">Contains children in grid.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -298,7 +298,7 @@ Changes separator between child nodes.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:27:44 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:00:36 UTC</small>
       </div>
     </div>
   </div>
