--- a/hbox.html
+++ b/hbox.html
@@ -147,7 +147,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">Contains children in horizontal box.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -268,7 +268,7 @@ Duplicates HBox object and create a new HBox pointer.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:37:45 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:02:24 UTC</small>
       </div>
     </div>
   </div>
