--- a/label.html
+++ b/label.html
@@ -152,7 +152,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides primitive text rendering.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -269,7 +269,7 @@ Changes Label text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:37:10 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 15:46:12 UTC</small>
       </div>
     </div>
   </div>
