--- a/progress_bar.html
+++ b/progress_bar.html
@@ -148,7 +148,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides primitive display progress.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -264,7 +264,7 @@ Changes progress color. For change background color use <tt class="docutils lite
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:34:50 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:05:04 UTC</small>
       </div>
     </div>
   </div>
