--- a/rich_edit_text.html
+++ b/rich_edit_text.html
@@ -118,7 +118,8 @@ function main() {
   text*: ColorTextRef
   hint_text*: ColorTextRef
   caret_color*: ColorRef
-  text_align*: AnchorRef       ## Text align."><wbr />Rich<wbr />Edit<wbr />Text<wbr />Obj<span class="attachedType"></span></a></li>
+  text_align*: AnchorRef       ## Text align.
+  on_edit*: proc (pressed_key: string): void ## This called when user press any key."><wbr />Rich<wbr />Edit<wbr />Text<wbr />Obj<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#RichEditTextPtr"
     title="RichEditTextPtr = ptr RichEditTextObj"><wbr />Rich<wbr />Edit<wbr />Text<wbr />Ptr<span class="attachedType"></span></a></li>
 
@@ -163,7 +164,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides convenient text input. With it, you can set color and underlie for specific chars.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -185,6 +186,7 @@ function main() {
   <span class="Identifier">hint_text</span><span class="Operator">*</span><span class="Other">:</span> <a href="color_text.html#ColorTextRef"><span class="Identifier">ColorTextRef</span></a>
   <span class="Identifier">caret_color</span><span class="Operator">*</span><span class="Other">:</span> <a href="color.html#ColorRef"><span class="Identifier">ColorRef</span></a>
   <span class="Identifier">text_align</span><span class="Operator">*</span><span class="Other">:</span> <a href="anchor.html#AnchorRef"><span class="Identifier">AnchorRef</span></a>       <span class="Comment">## Text align.</span>
+  <span class="Identifier">on_edit</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">pressed_key</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">void</span> <span class="Comment">## This called when user press any key.</span>
   </pre></dt>
 <dd>
 
@@ -312,7 +314,7 @@ Changes RichEditText text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:36:28 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:07:28 UTC</small>
       </div>
     </div>
   </div>
