--- a/rich_label.html
+++ b/rich_label.html
@@ -151,7 +151,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides convenient text rendering. With it, you can set color and underlie for specific chars.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -269,7 +269,7 @@ Changes RichLabel text.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:38:39 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:06:59 UTC</small>
       </div>
     </div>
   </div>
