--- a/sprite.html
+++ b/sprite.html
@@ -148,7 +148,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides display sprites.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -273,7 +273,7 @@ Returns mouse position.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-26 09:51:09 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:16:33 UTC</small>
       </div>
     </div>
   </div>
