--- a/texture_button.html
+++ b/texture_button.html
@@ -157,7 +157,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It is the convenient alternative of the Button node.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -291,7 +291,7 @@ Changes button texture, when it pressed.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-26 13:40:22 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:10:27 UTC</small>
       </div>
     </div>
   </div>
