--- a/texture_rect.html
+++ b/texture_rect.html
@@ -137,8 +137,8 @@ function main() {
     title="duplicate(self: TextureRectPtr; obj: var TextureRectObj): TextureRectPtr"><wbr />duplicate<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#loadTexture.e%2CTextureRectPtr%2Ccstring"
     title="loadTexture(self: TextureRectPtr; file: cstring)"><wbr />load<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
-  <li><a class="reference" href="#setTexture.e%2CTextureRectPtr%2CGlTexture"
-    title="setTexture(self: TextureRectPtr; gltexture: GlTexture)"><wbr />set<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
+  <li><a class="reference" href="#setTexture.e%2CTextureRectPtr%2CGlTextureObj"
+    title="setTexture(self: TextureRectPtr; gltexture: GlTextureObj)"><wbr />set<wbr />Texture<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#setTextureFilter.e%2CTextureRectPtr%2CColorRef"
     title="setTextureFilter(self: TextureRectPtr; color: ColorRef)"><wbr />set<wbr />Texture<wbr />Filter<span class="attachedType">TextureRectPtr</span></a></li>
   <li><a class="reference" href="#setTextureAnchor.e%2CTextureRectPtr%2CAnchorRef"
@@ -155,7 +155,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides a primitive display image.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -254,8 +254,8 @@ Duplicates TextureRect and create a new TextureRect pointer.
 
 
 </dd>
-<a id="setTexture.e,TextureRectPtr,GlTexture"></a>
-<dt><pre><span class="Keyword">method</span> <a href="#setTexture.e%2CTextureRectPtr%2CGlTexture"><span class="Identifier">setTexture</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">gltexture</span><span class="Other">:</span> <a href="image.html#GlTexture"><span class="Identifier">GlTexture</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+<a id="setTexture.e,TextureRectPtr,GlTextureObj"></a>
+<dt><pre><span class="Keyword">method</span> <a href="#setTexture.e%2CTextureRectPtr%2CGlTextureObj"><span class="Identifier">setTexture</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="texture_rect.html#TextureRectPtr"><span class="Identifier">TextureRectPtr</span></a><span class="Other">;</span> <span class="Identifier">gltexture</span><span class="Other">:</span> <a href="image.html#GlTextureObj"><span class="Identifier">GlTextureObj</span></a><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
@@ -305,7 +305,7 @@ Changes texture anchor.
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:47:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:11:58 UTC</small>
       </div>
     </div>
   </div>
