--- a/vprogress_bar.html
+++ b/vprogress_bar.html
@@ -149,7 +149,7 @@ function main() {
   <div class="nine columns" id="content">
   <div id="tocRoot"></div>
   
-  <p class="module-desc"></p>
+  <p class="module-desc">It provides a primitive display vertical progress.</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -267,7 +267,7 @@ Changes progress color. For change background color use <tt class="docutils lite
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-25 15:54:40 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-27 16:13:30 UTC</small>
       </div>
     </div>
   </div>
