--- a/nodesnim/core/rect2.html
+++ b/nodesnim/core/rect2.html
@@ -121,10 +121,10 @@ function main() {
     title="Rect2(x, y, w, h: float): Rect2Ref"><wbr />Rect2<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#Rect2%2CVector2Ref%2CVector2Ref"
     title="Rect2(left_top, width_height: Vector2Ref): Rect2Ref"><wbr />Rect2<span class="attachedType">Rect2Ref</span></a></li>
-  <li><a class="reference" href="#hasPoint%2CRect2Ref%2Cfloat%2Cfloat"
-    title="hasPoint(self: Rect2Ref; x, y: float): bool"><wbr />has<wbr />Point<span class="attachedType">Rect2Ref</span></a></li>
-  <li><a class="reference" href="#hasPoint%2CRect2Ref%2CVector2Ref"
-    title="hasPoint(self: Rect2Ref; vector: Vector2Ref): bool"><wbr />has<wbr />Point<span class="attachedType">Rect2Ref</span></a></li>
+  <li><a class="reference" href="#contains%2CRect2Ref%2Cfloat%2Cfloat"
+    title="contains(self: Rect2Ref; x, y: float): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
+  <li><a class="reference" href="#contains%2CRect2Ref%2CVector2Ref"
+    title="contains(self: Rect2Ref; vector: Vector2Ref): bool"><wbr />contains<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#intersects%2CRect2Ref%2CRect2Ref"
     title="intersects(self, other: Rect2Ref): bool"><wbr />intersects<span class="attachedType">Rect2Ref</span></a></li>
   <li><a class="reference" href="#contains%2CRect2Ref%2CRect2Ref"
@@ -189,15 +189,15 @@ function main() {
 
 
 </dd>
-<a id="hasPoint,Rect2Ref,float,float"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#hasPoint%2CRect2Ref%2Cfloat%2Cfloat"><span class="Identifier">hasPoint</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,Rect2Ref,float,float"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2Cfloat%2Cfloat"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">,</span> <span class="Identifier">y</span><span class="Other">:</span> <span class="Identifier">float</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
 
 </dd>
-<a id="hasPoint,Rect2Ref,Vector2Ref"></a>
-<dt><pre><span class="Keyword">proc</span> <a href="#hasPoint%2CRect2Ref%2CVector2Ref"><span class="Identifier">hasPoint</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">vector</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<a id="contains,Rect2Ref,Vector2Ref"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#contains%2CRect2Ref%2CVector2Ref"><span class="Identifier">contains</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="rect2.html#Rect2Ref"><span class="Identifier">Rect2Ref</span></a><span class="Other">;</span> <span class="Identifier">vector</span><span class="Other">:</span> <a href="vector2.html#Vector2Ref"><span class="Identifier">Vector2Ref</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 
 
@@ -248,7 +248,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-28 15:41:24 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-28 16:12:55 UTC</small>
       </div>
     </div>
   </div>
