--- a/nodesnim/core/enums.html
+++ b/nodesnim/core/enums.html
@@ -114,6 +114,15 @@ function main() {
   TEXTURE_FILL_XY,            ## Fill texture without keeping the aspect ratio.
   TEXTURE_KEEP_ASPECT_RATIO,  ## Fill texture with keeping the aspect ratio.
   TEXTURE_CROP                ## Crop and fill texture."><wbr />Texture<wbr />Mode<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#NodeKind"
+    title="NodeKind {.pure.} = enum
+  NODE_NODE, CANVAS_NODE, SCENE_NODE, AUDIO_STREAM_PLAYER_NODE,
+  COLLISION_SHAPE_2D_NODE, YSORT_NODE, SPRITE_NODE, ANIMATED_SPRITE_NODE,
+  NODE2D_NODE, KINEMATIC_BODY_2D_NODE, BOX_NODE, BUTTON_NODE, COLOR_RECT_NODE,
+  CONTROL_NODE, COUNTER_NODE, EDIT_TEXT_NODE, GRID_BOX_NODE, HBOX_NODE, LABEL_NODE,
+  POPUP_NODE, PROGRESS_BAR_NODE, RICH_EDIT_TEXT_NODE, RICH_LABEL_NODE, SCROLL_NODE,
+  SLIDER_NODE, TEXTURE_BUTTON_NODE, TEXTURE_PROGRESS_BAR_NODE, TEXTURE_RECT_NODE,
+  VBOX_NODE, VPROGRESS_BAR_NODE, VSLIDER_NODE"><wbr />Node<wbr />Kind<span class="attachedType"></span></a></li>
 
   </ul>
 </li>
@@ -157,6 +166,20 @@ function main() {
 
 
 </dd>
+<a id="NodeKind"></a>
+<dt><pre><a href="enums.html#NodeKind"><span class="Identifier">NodeKind</span></a> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">pure</span></span><span class="Other">.}</span></span> <span class="Other">=</span> <span class="Keyword">enum</span>
+  <span class="Identifier">NODE_NODE</span><span class="Other">,</span> <span class="Identifier">CANVAS_NODE</span><span class="Other">,</span> <span class="Identifier">SCENE_NODE</span><span class="Other">,</span> <span class="Identifier">AUDIO_STREAM_PLAYER_NODE</span><span class="Other">,</span>
+  <span class="Identifier">COLLISION_SHAPE_2D_NODE</span><span class="Other">,</span> <span class="Identifier">YSORT_NODE</span><span class="Other">,</span> <span class="Identifier">SPRITE_NODE</span><span class="Other">,</span> <span class="Identifier">ANIMATED_SPRITE_NODE</span><span class="Other">,</span>
+  <span class="Identifier">NODE2D_NODE</span><span class="Other">,</span> <span class="Identifier">KINEMATIC_BODY_2D_NODE</span><span class="Other">,</span> <span class="Identifier">BOX_NODE</span><span class="Other">,</span> <span class="Identifier">BUTTON_NODE</span><span class="Other">,</span> <span class="Identifier">COLOR_RECT_NODE</span><span class="Other">,</span>
+  <span class="Identifier">CONTROL_NODE</span><span class="Other">,</span> <span class="Identifier">COUNTER_NODE</span><span class="Other">,</span> <span class="Identifier">EDIT_TEXT_NODE</span><span class="Other">,</span> <span class="Identifier">GRID_BOX_NODE</span><span class="Other">,</span> <span class="Identifier">HBOX_NODE</span><span class="Other">,</span> <span class="Identifier">LABEL_NODE</span><span class="Other">,</span>
+  <span class="Identifier">POPUP_NODE</span><span class="Other">,</span> <span class="Identifier">PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">RICH_EDIT_TEXT_NODE</span><span class="Other">,</span> <span class="Identifier">RICH_LABEL_NODE</span><span class="Other">,</span> <span class="Identifier">SCROLL_NODE</span><span class="Other">,</span>
+  <span class="Identifier">SLIDER_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_BUTTON_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_PROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">TEXTURE_RECT_NODE</span><span class="Other">,</span>
+  <span class="Identifier">VBOX_NODE</span><span class="Other">,</span> <span class="Identifier">VPROGRESS_BAR_NODE</span><span class="Other">,</span> <span class="Identifier">VSLIDER_NODE</span></pre></dt>
+<dd>
+
+
+
+</dd>
 
 </dl></div>
 
@@ -167,7 +190,7 @@ function main() {
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-28 17:33:39 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-05-29 05:00:55 UTC</small>
       </div>
     </div>
   </div>
